--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -332,7 +332,7 @@
 
 <img src="block.svg" style="background-color: white" />
 
-* A block is a collection of transactions
+* A block is a sequence of transactions
 
 </script></section>
 
@@ -402,7 +402,7 @@
 * In order to expose functionality, most node software offers a *Remote Procedural Call* interface
 * Most common is JSON-RPC, which is just JSON messages sent over HTTP
   * Default Ethereum JSON-RPC port is 8545
-* [Documentation](https://github.com/ethresearch/en-ethereum-wiki/blob/master/json-rpc.md)
+* [Documentation](https://eth.wiki/json-rpc/API)
 
 </script></section>
 
@@ -498,7 +498,7 @@ Then run:
 * JSON-RPC is a *low-level* interface to a node
 * Most programmers interact with a higher-level library
   * [web3.js](https://web3js.readthedocs.io/en/1.0/) (JS)
-  * [ethers.js](https://docs.ethers.io/ethers.js/html/) (JS)
+  * [ethers.js](https://docs.ethers.io/v5/) (JS)
   * [Web3.py](https://web3py.readthedocs.io/en/stable/) (Python)
 
 </script></section>
