--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -477,6 +477,18 @@ contract ConditionalTipper {
 
 
 
+<section data-markdown><script type="text/template">
+
+## Flash loans
+
+* Some systems allow you to borrow large amounts of ETH/tokens with no collateral, as long as you give back in same transaction
+  * Risk free for the lending system because of atomic transactions
+* Not directly a security threat, but protocols need to assume attackers can present massive amounts of funds
+
+</script></section>
+
+
+
 
 
 <section data-markdown><script type="text/template">
