new lab: hack-timelock

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ body {
   <ul>
     <li>Exercise: <a href="lesson4/conditional-tipper.html">conditional-tipper.html</a></li>
     <li>Demo: <a href="lesson4/hack-simpledao.html">hack-simpledao.html</a></li>
-    <li>Lab 4: <a href="lesson4/hack-coinflipgame.html">hack-coinflipgame.html</a></li>
+    <li>Lab 4: <a href="lesson4/hack-timelock.html">hack-timelock.html</a></li>
   </ul>
 </div>
 
