--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -903,7 +903,7 @@ Hacker fallback:         <span class="highlightRed">dao.withdraw(10)</span>
 
 ## Lab 4
 
-[hack-coinflipgame.html](hack-coinflipgame.html)
+[hack-timelock.html](hack-timelock.html)
 
 </script></section>
 
