--- a/lesson3/overflow.html
+++ b/lesson3/overflow.html
@@ -40,4 +40,6 @@ contract TestOverflow {
 
 <li>What value do you need to enter to get it to overflow?</li>
 
+<li>Try using Solidity 0.8+ and observe the change in overflow behaviour</li>
+
 </ul>
