--- a/review/index.html
+++ b/review/index.html
@@ -613,6 +613,32 @@ require(balance[msg.sender] >= amount, "not enough balance");
 
 <section data-markdown><script type="text/template">
 
+## Schelling Points
+
+* Natural "meeting place" values
+  * People choose these values because they believe other people will choose them too
+* Example: Where to meet somebody in Paris?
+  * Eiffel tower
+
+</script></section>
+
+
+
+<section data-markdown><script type="text/template">
+
+## Merkle Trees
+
+* Allows a large data set to be digested to a single hash
+  * "Proofs" can be created to prove that an element is in the data set
+  * Requires witness values to be able to reconstruct the root, one per level of tree
+* Beauty of trees is that number of levels grows slowly compared to data elements
+
+</script></section>
+
+
+
+<section data-markdown><script type="text/template">
+
 ## End of review
 
 Questions?
